package app.db;

public enum UserRole {
    CUSTOMER, SALESPERSON
}
