package app.db;

public enum WoodCategory {
    RAFTER,PILLAR,BOARD
}
