package app.web;

public class Path {

    public static class Web {
        public static final String INDEX = "/";
        public static final String LOGIN = "/login";
    }

    public static class Template {
        public static final String INDEX = "/index.html";
        public static final String LOGIN = "/login.html";
    }
}
